feat: Complete appointment scheduling agent implementation
Backend:
- FastAPI server with Calendly integration
- RAG-based FAQ system with vector database
- Intelligent scheduling agent with conversation flow
- Session management and error handling

Frontend:
- Next.js application with floating chat UI
- Real-time messaging with backend API
- Smart suggestions and appointment confirmation
- Responsive design with Tailwind CSS
- API connection fixes and status monitoring

Configuration:
- Update .gitignore for frontend dependencies
- Add environment variable examples
- Include comprehensive documentation

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,33 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+BACKEND_COMPLETION_SUMMARY.md
+CALENDLY_API_FIX.md
+CALENDLY_REAL_API_SETUP.md
+FRONTEND_SETUP.md
+HOW_IT_WORKS.md
+QUICK_SETUP_REAL_API.md
+SETUP_INSTRUCTIONS.md
+TESTING_GUIDE.md
+assessment.txt
+SETUP_INSTRUCTIONS.md
+test_backend.py
+
+
+# Frontend / Next.js
+frontend/node_modules/
+frontend/.next/
+frontend/out/
+frontend/build/
+frontend/dist/
+frontend/.env.local
+frontend/.env*.local
+frontend/.vercel/
+frontend/.swc/
+frontend/*.tsbuildinfo
+frontend/next-env.d.ts
+
+
+frontend/TROUBLESHOOTING.md
+frontend/README.md
