--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,10 @@ pytest==7.4.4
 httpx==0.26.0
 python-dateutil==2.8.2
 
+# Database
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9  # PostgreSQL adapter
+
 # RAG-specific
 # Pin numpy to < 2.0 for ChromaDB compatibility
 numpy<2.0.0
