--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ python-dotenv==1.0.0
 pytest==7.4.4
 httpx==0.26.0
 python-dateutil==2.8.2
+pytz==2024.1
 
 # Database
 sqlalchemy==2.0.23
-psycopg2-binary==2.9.9  # PostgreSQL adapter
+pymysql==1.1.0  # MySQL adapter
+cryptography==41.0.7  # Required for PyMySQL SSL support
 
 # RAG-specific
 # Pin numpy to < 2.0 for ChromaDB compatibility
